--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
-
 <body>
   <!-- NAVIGATION BAR -->
   <header>
@@ -47,7 +45,7 @@
     <h2>Menu Favorit</h2>
     <div class="menu-container">
       <div class="menu-item">
-        <img src="https://media.istockphoto.com/id/802967466/id/foto/mangga-segar-dengan-smoothie-nanas-dan-jeruk-nipis.jpg?s=170667a&w=0&k=20&c=TfZwF6AsbeOX2GpJA5fZ5shOKgGenRwvG74Fw-Hickw=" alt="Tropical Mango" />
+        <img src="https://media.istockphoto.com/id/802967466/id/foto/mangga-segar-dengan-smoothie-nanas-dan-jeruk-nipis.jpg" alt="Tropical Mango" />
         <h3>Tropical Mango</h3>
         <p>Mangga, nanas, jeruk nipis</p>
       </div>
@@ -74,13 +72,23 @@
     </div>
   </section>
 
+  <!-- POPUP MENU -->
+  <div class="menu-popup" id="menuPopup">
+    <div class="popup-content">
+      <img src="" alt="Menu Detail" />
+      <h3></h3>
+      <p></p>
+      <button id="closePopup">Tutup</button>
+    </div>
+  </div>
+
   <!-- ABOUT SECTION -->
   <section id="about" class="about">
     <h2>Tentang Kami</h2>
     <p>Bloom Smoothies hadir untuk memberikan minuman segar sehat dari buah dan bahan alami pilihan. Kami percaya minuman sehat bisa jadi gaya hidup yang kekinian.</p>
   </section>
 
-  <!-- CONTACT FORM SECTION -->
+  <!-- CONTACT SECTION -->
   <section id="contact" class="contact">
     <h2>Kritik & Saran</h2>
     <form>
@@ -97,5 +105,4 @@
     <p>&copy; 2025 Bloom Smoothies. All rights reserved.</p>
   </footer>
 </body>
-
 </html>
