--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#menu">Menu</a></li>
         <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Messages</a></li>
+        <li><a href="#contact">Message Us</a></li>
       </ul>
     </nav>
   </header>
@@ -93,7 +93,7 @@
 
   <!-- CONTACT SECTION -->
   <section id="contact" class="contact">
-    <h2>Messages</h2>
+    <h2>Message Us</h2>
     <form>
       <input type="text" placeholder="Nama Anda" required />
       <input type="email" placeholder="Alamat Email" required />
